force-app/main/default/objects/Stock_Transfer__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Stock Transfers</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>