force-app/main/default/objects/Stock_Transfer__c/fields/Stock_Request__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Request</label>
    <referenceTo>Stock_Request__c</referenceTo>
    <relationshipLabel>Stock Transfers</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>