force-app/main/default/objects/Stock_Transfer__c/fields/Stock_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request_Id__c</fullName>
    <formula>Stock_Request__r.Stock_Request_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Request Id</label>
    <type>Text</type>
</CustomField>