force-app/main/default/objects/Stock_Transfer__c/fields/Stock_Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer_Id__c</fullName>
    <displayFormat>ST-{0000}</displayFormat>
    <label>Stock Transfer Id</label>
    <type>AutoNumber</type>
</CustomField>