force-app/main/default/objects/Stock_Transfer__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Stock Transfers</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>