force-app/main/default/objects/Stock_Transfer__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stock Transfers</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>