force-app/main/default/objects/Stock_Transfer__c/fields/Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Id__c</fullName>
    <formula>Warehouse__r.Warehouse_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Id</label>
    <type>Text</type>
</CustomField>