force-app/main/default/objects/Stock_Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stock_Request__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <columns>Route_Id__c</columns>
    <columns>Company_Id__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>