force-app/main/default/objects/Stock_Transfer__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Stock_Request__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <columns>Route_Id__c</columns>
    <columns>Company_Id__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>